--- a/app/templates/archivo_clinico/solicitudes.html
+++ b/app/templates/archivo_clinico/solicitudes.html
@@ -21,6 +21,8 @@
         <a href="{{ url_for('archivo_clinico.nueva_solicitud') }}" class="btn btn-success mb-3">
             <i class="bi bi-plus-circle"></i> Nueva Solicitud
         </a>
+
+        <a href="{{ url_for('archivo_clinico.index') }}" class="btn btn-success mb-3">Regresar</a>
         <form method="get" action="{{ url_for('archivo_clinico.lista_solicitudes') }}" class="mb-3">
             <div class="input-group">
                 <input type="text" name="search" class="form-control"
