--- a/app/templates/enfermeria/formulario.html
+++ b/app/templates/enfermeria/formulario.html
@@ -1041,7 +1041,7 @@
         </div>
         <div class="tab-pane fade" id="instructivo3" role="tabpanel" aria-labelledby="instructivo3-tab">
                 <h2 class="mt-5">Exportacion de Captura</h2>
-                <form action="enfermeria/exportar" method="GET" id="reporteForm">
+                <form action="enfermeria/exportar" method="POST" id="reporteForm">
                     <label for="fecha_inicio">Fecha inicio:</label>
                     <input type="date" id="fecha_inicio" name="fecha_inicio" required>
 
