--- a/app/templates/enfermeria/formulario.html
+++ b/app/templates/enfermeria/formulario.html
@@ -971,7 +971,7 @@
                             <td>{{ row.domicilio }}</td>
                             
                             <td>
-                                <form method="POST" action="/eliminar/{{ row.id }}" style="display:inline">
+                                <form method="POST" action="/enfermeria/eliminar/{{ row.id }}" style="display:inline">
                                     <button class="btn btn-danger btn-sm" type="submit">Eliminar</button>
                                 </form>
                             </td>
@@ -1012,7 +1012,7 @@
                     }
 
                     try {
-                        const response = await fetch(`/api/reporte?inicio=${inicio}&fin=${fin}`);
+                        const response = await fetch(`/enfermeria/api/reporte?inicio=${inicio}&fin=${fin}`);
                         const data = await response.json();
 
                         const tbody = document.querySelector('#tablaResultados tbody');
@@ -1041,7 +1041,7 @@
         </div>
         <div class="tab-pane fade" id="instructivo3" role="tabpanel" aria-labelledby="instructivo3-tab">
                 <h2 class="mt-5">Exportacion de Captura</h2>
-                <form action="enfermeria/exportar" method="POST" id="reporteForm">
+                <form action="/enfermeria/exportar" method="POST" id="reporteForm">
                     <label for="fecha_inicio">Fecha inicio:</label>
                     <input type="date" id="fecha_inicio" name="fecha_inicio" required>
 
