--- a/app/templates/main/home.html
+++ b/app/templates/main/home.html
@@ -156,7 +156,7 @@
         <div class="card-body text-center">
          <i class="bi bi-journal-medical text-success" style="font-size: 2.5rem;"></i>
           <h5 class="card-title mt-3">Notas Medicas</h5>
-          <a href="{{ url_for('medicos.listar_notas') }}" class="btn btn-maroon mt-2 w-100">Entrar</a>
+          <a href="{{ url_for('medicos.menu_medico') }}" class="btn btn-maroon mt-2 w-100">Entrar</a>
         </div>
       </div>
     </div>
