--- a/app/templates/enfermeria/formulario.html
+++ b/app/templates/enfermeria/formulario.html
@@ -971,9 +971,10 @@
                             <td>{{ row.domicilio }}</td>
                             
                             <td>
-                                <form method="POST" action="/enfermeria/eliminar/{{ row.id }}" style="display:inline">
-                                    <button class="btn btn-danger btn-sm" type="submit">Eliminar</button>
-                                </form>
+                               <form method="POST" action="{{ url_for('enfermeria.eliminar') }}" style="display:inline">
+    <input type="hidden" name="ids" value="{{ row.id }}">
+    <button class="btn btn-danger btn-sm" type="submit">Eliminar</button>
+</form>
                             </td>
                         </tr>
                         {% endfor %}
