--- a/app/templates/main/home.html
+++ b/app/templates/main/home.html
@@ -154,8 +154,8 @@
     <div class="col-md-6 col-lg-3">
       <div class="card h-100 shadow-sm border-0">
         <div class="card-body text-center">
-         <i class="bi bi-journal-medical text-success" style="font-size: 2.5rem;"></i>
-          <h5 class="card-title mt-3">Notas Medicas</h5>
+        <i class="bi bi-heart-pulse text-success" style="font-size: 2.5rem;"></i> 
+          <h5 class="card-title mt-3">Consulta Médica</h5>
           <a href="{{ url_for('medicos.menu_medico') }}" class="btn btn-maroon mt-2 w-100">Entrar</a>
         </div>
       </div>
