--- a/app/templates/paciente/_form.html
+++ b/app/templates/paciente/_form.html
@@ -1,6 +1,6 @@
 {# templates/paciente/_form.html #}
 <div class="mb-3">
-  <label for="nombre" class="form-label">Nombre</label>
+  <label for="nombre" class="form-label">Nombre, Apellido Paterno, Apellido Materno</label>
   <input type="text" name="nombre" class="form-control" value="{{ paciente.nombre if paciente else '' }}" required>
 </div>
 
