Fix: se agrego control mac

--- a/app/templates/admin/admin.html
+++ b/app/templates/admin/admin.html
@@ -27,6 +27,7 @@
         <a class="btn" href="{{ url_for('admin.registrar_usuario') }}">Registrar Nuevo Usuario</a>
         <a class="btn" href="{{ url_for('admin.lista_usuarios') }}">Administrar Usuarios</a>
         <a class="btn" href="{{ url_for('formatos.formatos') }}">Ver / Cargar Formatos</a>
+        <a class="btn" href="{{ url_for('control_mac.listar_macs') }}">Registrar un Direccion mac</a>
     </div>
 {% endblock %}
 </body>
